feat: create recipe with adding instructions and products
