# backend/docs/swagger.json
@@ -273,6 +273,51 @@
                 }
             }
         },
+        "/recipe": {
+            "post": {
+                "tags": [
+                    "Recipe"
+                ],
+                "summary": "Create recipe and add products and instructions",
+                "parameters": [
+                    {
+                        "description": "Recipe",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/modules_storage_internal_handler.dtoCreateRecipe"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_IN-45_INT20H-test-task_pkg_customerrors.UnauthorizedError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/sign-in": {
             "post": {
                 "consumes": [
@@ -389,6 +434,20 @@
                 }
             }
         },
+        "modules_storage_internal_handler.dtoCreateInstruction": {
+            "type": "object",
+            "required": [
+                "priority"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "priority": {
+                    "type": "integer"
+                }
+            }
+        },
         "modules_storage_internal_handler.dtoCreateInventory": {
             "type": "object",
             "required": [
@@ -420,6 +479,57 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "modules_storage_internal_handler.dtoCreateRecipe": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "cooking_time_minutes": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "instructions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/modules_storage_internal_handler.dtoCreateInstruction"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/modules_storage_internal_handler.dtoCreateRecipesProducts"
+                    }
+                }
+            }
+        },
+        "modules_storage_internal_handler.dtoCreateRecipesProducts": {
+            "type": "object",
+            "required": [
+                "amount",
+                "amount_type",
+                "product_id"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "amount_type": {
+                    "type": "string"
+                },
+                "product_id": {
                     "type": "string"
                 }
             }
